@@ -10,6 +10,7 @@
 		'@srcdir@/check_xml_path',
 		'@srcdir@/check_xml_converters',
 		'@srcdir@/check_xmlstream',
+		'@srcdir@/check_jid',
 		'@srcdir@/check_factory_stream',
 		'@srcdir@/check_factory_legacy_auth',
 		'@srcdir@/check_coverity'
