@@ -8,6 +8,7 @@ EXTRA_DIST = testsuite.erl test.sh					\
 	     check_xml_path.erl						\
 	     check_xml_converters.erl					\
 	     check_xmlstream.erl					\
+	     check_jid.erl						\
 	     check_factory_stream.erl					\
 	     check_factory_legacy_auth.erl				\
 	     check_coverity.erl
@@ -20,6 +21,7 @@ TESTS = check_xml_parser						\
 	check_xml_path							\
 	check_xml_converters						\
 	check_xmlstream							\
+	check_jid							\
 	check_factory_stream						\
 	check_factory_legacy_auth					\
 	check_coverity
@@ -27,8 +29,8 @@ TESTS = check_xml_parser						\
 TESTS_ENVIRONMENT = ERL="$(ERL)"					\
 	TOP_SRCDIR="$(top_srcdir)"					\
 	TOP_BUILDDIR="$(top_builddir)"					\
-	TESTS="check_xml_parser check_xml_attribute_handlers check_xml_element_handlers check_xml_cdata_handlers check_xml_path check_xml_converters check_xmlstream check_factory_stream check_factory_legacy_auth"			\
-	COVERED_MODULES="exmpp_xml exmpp_xmlstream exmpp_factory"
+	TESTS="check_xml_parser check_xml_attribute_handlers check_xml_element_handlers check_xml_cdata_handlers check_xml_path check_xml_converters check_xmlstream check_jid check_factory_stream check_factory_legacy_auth"			\
+	COVERED_MODULES="exmpp_xml exmpp_xmlstream exmpp_jid exmpp_factory"
 
 build:
 	$(ERL) -make
@@ -52,6 +54,9 @@ check_xml_converters: build $(srcdir)/test.sh
 	cp $(srcdir)/test.sh $@ && chmod 755 $@
 
 check_xmlstream: build $(srcdir)/test.sh
+	cp $(srcdir)/test.sh $@ && chmod 755 $@
+
+check_jid: build $(srcdir)/test.sh
 	cp $(srcdir)/test.sh $@ && chmod 755 $@
 
 check_factory_stream: build $(srcdir)/test.sh
